[build-system]
requires = [
    "setuptools>=18.0",
]
build-backend = "setuptools.build_meta"


[project]
name="dlk"
authors = [
    {name = "cstsunfu", email = "cstsunfu@gmail.com"},
]
readme = "README.md"
dependencies = [
    "torch>=2.1, <2.2",
    "intc>=0.1.0, <0.2",
    "aiohttp!=4.0.0a0,!=4.0.0a1",
    "setuptools",
    "packaging>=20.9, <24",
    "hjson>=3.0.2",
    "pandas>=2.0",
    "pyecharts>=2.0",
    "pandarallel>=1.6.5",
    "tensorboard>=2.7.0, <3.0",
    "google-auth>=1.8.0",
    "markdown>=3.3.4",
    "fsspec>=2023.5, <2024.2",
    "svgwrite>=1.4",
    "requests-oauthlib>=1.3.0",
    "tokenizers>=0.12.0, <0.13",
    "datasets>=2.17.0, <2.20",
    "tabulate>=0.8.9",
    "transformers>=4.37.0, <4.45",
    "torchmetrics>=1.2.1",
    "lightning>=2.2.0, <2.3",
    "streamlit>=1.32"
]
dynamic = ["version", "license", "description"]
requires-python = ">=3.8"
keywords = ["dlk", "pytorch", "lightning"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License"
]
